# demo-fastapi-ci-cd

./: .dockerignore  .gitignore  README.md  pyproject.toml
backend/auth_service/app/: main.py
backend/auth_service/app/api/: config.py  constants.py  dependencies.py  router.py  schemas.py  utils.py
backend/auth_service/app/db/: __init__.py  crud.py
backend/auth_service/app/db/migrations/: m_01_setup.py
backend/docs_service/: Dockerfile
backend/docs_service/app/migrations/: 01_setup.py
tests/: conftest.py  fixtures.py  utils.py
